Changed prompt into 3 buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <button id="button1">Rock</button>
+        <button id="button2">Paper</button>
+        <button id="button3">Scissors</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
