--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <button id="button1">Rock</button>
         <button id="button2">Paper</button>
         <button id="button3">Scissors</button>
